--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+.config.txt
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.config
